<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Search Dialog button -->
    <item
        android:id="@+id/map_search"
        android:title="@string/map_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom" />
    
    <!-- Current location button -->
    <item
        android:id="@+id/current_location"
        android:title="@string/current_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:showAsAction="ifRoom" />
    
    <!-- Layers button -->
    <item
        android:id="@+id/layers"
        android:title="@string/layers"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/traffic"
                android:title="@string/layer_traffic"
                android:checkable="true" />
            <item
                android:id="@+id/satellite"
                android:title="@string/layer_satellite"
                android:checkable="true" />
        </menu>
    </item>
</menu>
